<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingTop="32dp"
    android:paddingEnd="24dp"
    android:paddingBottom="32dp"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:drawableLeft="@mipmap/introduce"
            android:drawablePadding="4dp"
            android:gravity="center"
            android:text="@string/introduction"
            android:textColor="@color/aboutIcon"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:background="@color/lineColor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:lineSpacingExtra="3dp"
            android:text="@string/settingContent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="8dp"
            android:background="@color/lineColor" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/pen"
            android:drawablePadding="4dp"
            android:gravity="center"
            android:text="一切值得"
            android:textColor="@color/aboutIcon"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:background="@color/lineColor" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:columnCount="2">

            <Button
                android:id="@+id/btn_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:background="?android:attr/selectableItemBackground"
                android:drawableLeft="@mipmap/code"
                android:drawablePadding="12dp"
                android:gravity="start|center_vertical"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:text="@string/viewCode"
                android:textColor="@color/defaultTextColor"
                tools:targetApi="lollipop" />

            <Button
                android:id="@+id/btn_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:background="?android:attr/selectableItemBackground"
                android:drawableLeft="@mipmap/share"
                android:drawablePadding="12dp"
                android:gravity="start|center_vertical"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:text="@string/shared"
                android:textColor="@color/defaultTextColor"
                tools:targetApi="lollipop" />

            <Button
                android:id="@+id/btn_bullshit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:background="?android:attr/selectableItemBackground"
                android:drawableLeft="@mipmap/bullshit"
                android:drawablePadding="12dp"
                android:gravity="start|center_vertical"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:text="@string/bullshit"
                android:textColor="@color/defaultTextColor"
                tools:targetApi="lollipop" />

            <Button
                android:id="@+id/btn_friends"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:background="?android:attr/selectableItemBackground"
                android:drawableLeft="@mipmap/friends"
                android:drawablePadding="12dp"
                android:gravity="start|center_vertical"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:text="@string/friends"
                android:textColor="@color/defaultTextColor"
                tools:targetApi="lollipop" />
        </GridLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="8dp"
            android:background="@color/lineColor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.02"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/thanks"
            android:drawablePadding="4dp"
            android:gravity="center"
            android:text="感谢前辈"
            android:textColor="@color/aboutIcon"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:background="@color/lineColor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_weight="0.70"
            android:autoLink="web"
            android:lineSpacingExtra="6dp"
            android:text="@string/thanks"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="8dp"
            android:background="@color/lineColor" />

    </LinearLayout>
</LinearLayout>